# banking_widget_transactions

./: README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
