[tool.poetry]
name = "banking-widget-transactions"
version = "0.1.0"
description = ""
authors = ["Polyakov Vitaly <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
.git
'''

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '''venv'''

[tool.isort]
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_sort_within_sections = true
lines_after_imports = 2
